// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTitreFromTypeId fusions 1`] = `
Object {
  "apc": null,
  "aph": null,
  "apm": null,
  "apw": null,
  "arc": null,
  "arg": null,
  "arm": null,
  "axm": Object {
    "count": "single",
    "typeId": "arm",
  },
  "cxf": Object {
    "count": "multiple",
    "typeId": "cxf",
  },
  "cxg": Object {
    "count": "multiple",
    "typeId": "cxg",
  },
  "cxh": Object {
    "count": "multiple",
    "typeId": "cxh",
  },
  "cxi": Object {
    "count": "multiple",
    "typeId": "cxi",
  },
  "cxm": Object {
    "count": "multiple",
    "typeId": "cxm",
  },
  "cxr": Object {
    "count": "multiple",
    "typeId": "cxr",
  },
  "cxs": Object {
    "count": "multiple",
    "typeId": "cxs",
  },
  "cxw": Object {
    "count": "multiple",
    "typeId": "cxw",
  },
  "inh": null,
  "ini": null,
  "inm": null,
  "inr": null,
  "pcc": null,
  "prf": null,
  "prg": null,
  "prh": null,
  "pri": null,
  "prm": null,
  "prr": null,
  "prs": null,
  "prw": null,
  "pxf": null,
  "pxg": null,
  "pxh": null,
  "pxi": null,
  "pxm": Object {
    "count": "single",
    "typeId": "prm",
  },
  "pxr": null,
  "pxw": null,
}
`;

exports[`getTitreFromTypeId pas de fusions 1`] = `
Object {
  "apc": null,
  "aph": null,
  "apm": null,
  "apw": null,
  "arc": null,
  "arg": null,
  "arm": null,
  "axm": Object {
    "count": "single",
    "typeId": "arm",
  },
  "cxf": null,
  "cxg": null,
  "cxh": null,
  "cxi": null,
  "cxm": null,
  "cxr": null,
  "cxs": null,
  "cxw": null,
  "inh": null,
  "ini": null,
  "inm": null,
  "inr": null,
  "pcc": null,
  "prf": null,
  "prg": null,
  "prh": null,
  "pri": null,
  "prm": null,
  "prr": null,
  "prs": null,
  "prw": null,
  "pxf": null,
  "pxg": null,
  "pxh": null,
  "pxi": null,
  "pxm": Object {
    "count": "single",
    "typeId": "prm",
  },
  "pxr": null,
  "pxw": null,
}
`;
